fix: resume download pdf on mobile

--- a/assets/resume/_me.css
+++ b/assets/resume/_me.css
@@ -87,3 +87,31 @@
     display: none;
   }
 }
+
+.downloader {
+  position: absolute;
+  top: 1.5rem;
+  right: 1.5rem;
+
+  @media (--medium) {
+    right: -4rem;
+    margin-top: 1rem;
+  }
+
+  @media print {
+    display: none;
+  }
+}
+
+.downloader p {
+  font-size: 0.8rem;
+  position: relative;
+  left: 0.2rem;
+  top: -0.3rem;
+}
+
+.downloader svg {
+  fill: currentColor;
+  max-width: 2rem;
+}
+
